# constraint-instrument

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/constraint_instrument/: goodman.py
tests/: test_instrument.py  test_integration.py
